RESOLVED FIXED58108
Clicks not recognized on http://www.nibblestutorials.net/ which uses Silverlight
https://bugs.webkit.org/show_bug.cgi?id=58108
Summary Clicks not recognized on http://www.nibblestutorials.net/ which uses Silverlight
Anders Carlsson
Reported 2011-04-07 18:15:25 PDT
Clicks not recognized on http://www.nibblestutorials.net/ which uses Silverlight
Attachments
Patch (2.50 KB, patch)
2011-04-07 18:17 PDT, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2011-04-07 18:17:05 PDT
Simon Fraser (smfr)
Comment 2 2011-04-07 18:26:22 PDT
Comment on attachment 88749 [details] Patch Did we do this in WebKit1?
Anders Carlsson
Comment 3 2011-04-08 10:00:01 PDT
WebKit Review Bot
Comment 4 2011-04-08 10:53:19 PDT
http://trac.webkit.org/changeset/83306 might have broken Qt Linux Release The following tests are not passing: editing/selection/5354455-1.html editing/selection/5354455-2.html editing/selection/button-right-click.html editing/selection/context-menu-on-text.html editing/selection/context-menu-text-selection.html editing/selection/empty-cell-right-click.html fast/events/context-onmousedown-event.html fast/events/contextmenu-scrolled-page-with-frame.html fast/events/right-click-focus.html svg/custom/use-events-crash.svg
Note You need to log in before you can comment on or make changes to this bug.