2011-04-07  Anders Carlsson  <andersca@apple.com>

Reviewed by Simon Fraser.

        Clicks not recognized on http://www.nibblestutorials.net/ which uses Silverlight
        https://bugs.webkit.org/show_bug.cgi?id=58108
        <rdar://problem/9167611>

        Change platformHandleMouseEvent to return true, which means that the plug-in has handled the
        event. Some plug-ins (like Silverlight) will return false from NPP_HandleEvent even though the
        event has been handled. In this case it lead to a very subtle bug where the plug-in element would
        lose focus right after a mouse down even had been sent.

        * WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
        (WebKit::NetscapePlugin::platformHandleMouseEvent):


Canonical link: https://commits.webkit.org/73083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83306 268f45cc-cd09-0410-ab3c-d52691b4dbfc